# python_developer_dio

./: README.md
Estrutura de Dados/: Especificações do Projeto.md  README.md  sistema_bancario_v2.py
Fundamentos de Python/: Especificações do Projeto.md  README.md  sistema_bancario_v1.py
Integração com Python e Frameworks/: Especificações do Projeto.md  FastAPI_baseD.xlsx  README.md
Praticando Desenvolvimento Web Com Python/: README.md
Praticando Desenvolvimento Web Com Python/dio-app-twitter/: main.py  pyproject.toml
Praticando Desenvolvimento Web Com Python/dio-app-twitter/src/: connection.py  constants.py  secrets.py  services.py
Programação Orientada a Objetos/: Especificações do Projeto.md  README.md  sistema_bancario_v3.py
Tratamento de Dados/: Especificações do Projeto.md  README.md
Tratamento de Dados/Descomplicando a Criação de Pacotes em Python/: .gitignore  README.MD  README.md  filter.py
Tratamento de Dados/Descomplicando a Criação de Pacotes em Python/example/: example.py
